--- a/project_cats/tabby/templates/form.html
+++ b/project_cats/tabby/templates/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>AJAX Example</title>
+	<title>Picking up cats</title>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
